fix: restore 3.3 seamless relay transport with current SBS path fallback